--- a/index-style.css
+++ b/index-style.css
@@ -23,8 +23,17 @@ h3 {
 
 p {
 	font-size: 4em;
-	
+}
 
+#text-box {
+	background-color: #FEDC01;
+	border: none;
+	color: black;
+	font-family: raleway;
+	font-size: 1em;
+	margin-right: 2%;
+	text-align:center;
+	/*padding: 2%;*/
 }
 
 #wrap {
